@@ -1,6 +1,11 @@
 # ChangeLog for dev-ml/camlp4
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/camlp4/ChangeLog,v 1.5 2015/03/05 17:30:58 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/camlp4/ChangeLog,v 1.6 2015/03/05 17:46:09 aballier Exp $
+
+*camlp4-4.02.1_p3 (05 Mar 2015)
+
+  05 Mar 2015; Alexis Ballier <aballier@gentoo.org> +camlp4-4.02.1_p3.ebuild:
+  version bump
 
   05 Mar 2015; Alexis Ballier <aballier@gentoo.org> camlp4-4.02.1_p2.ebuild:
   block old ocaml versions
